CV as of July 2013

--- a/tbekolay_cv.tex
+++ b/tbekolay_cv.tex
@@ -9,10 +9,7 @@
 
 \begin{document}
 
-\name{\Huge{Trevor Bekolay}}
-% \address used twice to have two lines of address
-\address{328 Breezewood Cres, Waterloo, ON}
-\address{tbekolay@gmail.com $\cdot$ (519) 573-4815}
+\name{\Huge{Trevor Bekolay} \hspace{7.8em} \small{tbekolay@gmail.com}}
 
 \begin{resume}
 
@@ -39,57 +36,60 @@ Cumulative GPA: 4.28/4.5
 \section{AWARDS \& \\ SCHOLARSHIPS}
 
 \begin{tabular}{lrr}
+{\sl David R. Cheriton Grad. Scholarship} (CS, UWaterloo) &
+\$20,000 & 2012/09 -- 2014/09 \\
 {\sl Alexander Graham Bell CGS - Doctorate} (NSERC) &
 \$105,000 & 2012/09 -- 2015/09 \\
-{\sl President's Graduate Scholarship} (CS, U. of Waterloo) &
+{\sl President's Graduate Scholarship} (CS, UWaterloo) &
 \$30,000 & 2012/09 -- 2015/09 \\
 {\sl Ontario Graduate Scholarship} (Gov. of Ontario) & 
 Declined & 2012/09 -- 2013/09 \\
 {\sl Ontario Graduate Scholarship} (Gov. of Ontario) &
 \$15,000 & 2011/09 -- 2012/09 \\
-{\sl President's Graduate Scholarship} (CS, U. of Waterloo) &
+{\sl President's Graduate Scholarship} (CS, UWaterloo) &
 \$10,000 & 2011/09 -- 2012/09 \\
 {\sl OGS in Science and Technology} (Gov. of Ontario) &
 \$5,000 & 2011/01 -- 2011/05 \\
 {\sl Alexander Graham Bell CGS - Masters} (NSERC) &
 \$17,500 & 2009/09 -- 2010/09 \\
-{\sl President's Graduate Scholarship} (CS, U. of Waterloo) &
+{\sl President's Graduate Scholarship} (CS, UWaterloo) &
 \$10,000 & 2009/09 -- 2010/09 \\
-{\sl Distinguished TA Award} (CS, U. of Waterloo) &
+{\sl Distinguished TA Award} (CS, UWaterloo) &
 -- & 2010/09 \\
-{\sl Excellence in Teaching Assistance Award} (U. of Manitoba) &
+{\sl Excellence in Teaching Assistance Award} (UManitoba) &
 \$300 & 2008/09 \\
-{\sl Shell FUEL Scholarship} (U. of Manitoba) &
+{\sl Shell FUEL Scholarship} (UManitoba) &
 \$3,750 & 2008/09 -- 2009/04 \\
 {\sl Undergraduate Student Research Award} (NSERC) &
 \$4,500 & 2008/05 -- 2008/08 \\
-{\sl Elizabeth Luginbuhl Memorial Award} (U. of Manitoba) &
+{\sl Elizabeth Luginbuhl Memorial Award} (UManitoba) &
 \$2,250 & 2007/09 -- 2008/09 \\
 {\sl Undergraduate Student Research Award} (NSERC) &
 \$4,500 & 2007/05 -- 2007/08 \\
-{\sl Japan Student Services Scholarship} (Kokugakuin, Tokyo) &
+{\sl Japan Student Services Scholarship} (Kokugakuin) &
 \$11,000 & 2005/08 -- 2006/08
 \end{tabular}
+
 \section{TEACHING \\EXPERIENCE}
   {\bf Sessional Instructor} ~~3 terms \vspace{4pt} \\
   David R. Cheriton School of Computer Science, University of Waterloo
-  \begin{itemize}  \itemsep -2pt % reduce space between items
+  \begin{itemize}  \itemsep -2pt
     \item CS230 - Introduction to Computers and Computer Systems \hfill Fall 2011
     \item CS116 - Introduction to Computer Science 2 \hfill Winter 2011
   \end{itemize} \vspace{-4pt}
   Department of Computer Science, University of Manitoba
-  \begin{itemize}  \itemsep -2pt % reduce space between items
+  \begin{itemize}  \itemsep -2pt
     \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2008
   \end{itemize}
   
   {\bf Tutorial/Lab Instructor} ~~9 terms \vspace{4pt} \\
   David R. Cheriton School of Computer Science, University of Waterloo
-  \begin{itemize}  \itemsep -2pt % reduce space between items
+  \begin{itemize}  \itemsep -2pt
     \item CS230 - Intro to Comp. \& Comp. Systems \hfill Fall 2012, Fall 2011, Winter 2010
     \item CS115 - Introduction to Computer Science 1 \hfill Fall 2010
   \end{itemize} \vspace{-4pt}
   Department of Computer Science, University of Manitoba
-  \begin{itemize}  \itemsep -2pt % reduce space between items
+  \begin{itemize}  \itemsep -2pt
     \item COMP2160 - Programming Practices \hfill Fall 2008, Fall 2007
     \item COMP2140 - Data Structures and Algorithms \hfill Winter 2008
     \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2007
@@ -98,12 +98,12 @@ Declined & 2012/09 -- 2013/09 \\
   
   {\bf Marker} ~~8 terms \vspace{4pt} \\
   David R. Cheriton School of Computer Science, University of Waterloo
-  \begin{itemize}  \itemsep -2pt % reduce space between items
+  \begin{itemize}  \itemsep -2pt
     \item CS486/686 - Introduction to Artificial Intelligence \hfill Summer 2010
     \item CS135 - Designing Functional Programs \hfill Fall 2009
   \end{itemize} \vspace{-4pt}
   Department of Computer Science, University of Manitoba
-  \begin{itemize}  \itemsep -2pt % reduce space between items
+  \begin{itemize}  \itemsep -2pt
     \item COMP3040 - Technical Communication in CS \hfill Winter 2009, Winter 2008
     \item COMP3620 - Professional Practice in Computer Science \hfill Winter 2009
     \item COMP2140 - Data Structures and Algorithms \hfill Winter 2008, Winter 2007
@@ -111,41 +111,29 @@ Declined & 2012/09 -- 2013/09 \\
   \end{itemize}
 
 \section{TEACHING \\ACCREDITATION}
-  {\bf Fundamentals of University Teaching} \\
-  Completed in April, 2012.
-
   {\bf Certificate in University Teaching} \\
   In progress; expected completion in August, 2013.
+
+  {\bf Fundamentals of University Teaching} \\
+  Completed in April, 2012.
 
 \section{WORK \\EXPERIENCE}
   {\sl Staff Writer} \hfill Winter 2010 - Summer 2011 \\
   How-To Geek, LLC, Herndon, VA
-  \begin{itemize}  \itemsep -2pt % reduce space between items
-    \item Wrote how-to guides on various technical topics for the howtogeek.com blog.
-    \item Wrote over 55 articles which have been viewed over 3.5 million times collectively.
-  \end{itemize}
   
   {\sl Science and Technology Editor} \hfill 2008 - 2009 \\
   The Manitoban student newspaper, University of Manitoba
-  \begin{itemize}  \itemsep -2pt % reduce space between items
-    \item Prepared a weekly science and technology section.
-    \item Wrote over 70 articles.
-    \item Recruited several volunteer contributors and edited their submissions.
-  \end{itemize}
   
   {\sl Research Assistant} \hfill Winter 2008 \\
   Centres for Research in Youth, Science Teaching and Learning (CRYSTAL)
-  \begin{itemize}  \itemsep -2pt % reduce space between items
-    \item Created several interactive animations for teaching science concepts to students.
-    \item Collaborated with a CRYSTAL group in Edmonton, AB.
-  \end{itemize}
   
   {\sl Research Assistant} \hfill Winter 2007 \\
-  Centres for Research in Youth, Science Teaching and Learning (CRYSTAL)
-  \begin{itemize}  \itemsep -2pt % reduce space between items
-    \item Assisted with the PaSSAGE (Player-Specific Stories via Automatically Generated Events) project.
-    \item Created a GUI tool in Python to aid in the development of PaSSAGE.
-  \end{itemize}
+  Intelligent Reasoning, Critiquing, and Learning lab at the University of Alberta
+
+\section{MEMBERSHIPS}
+  TeX Users Group. June 2012 - Present.
+  
+  	Society for Neuroscience. 2011.
 
 \section{OTHER \\ ACTIVITIES}
   Co-founder and co-chair of the Cheriton Review committee,
@@ -160,6 +148,9 @@ Declined & 2012/09 -- 2013/09 \\
 \clearpage
 
 \section{REFEREED \\PUBLICATIONS}
+  Eliasmith, C., \textbf{Bekolay, T.}, and Choo, X. (2013) \\
+   {\sl Biological cognition: Learning and memory}, in Eliasmith, C. ``How to build a brain: A neural architecture for biological cognition.'' Oxford University Press.
+
   Eliasmith, C., Stewart, T.C., Choo, X., \textbf{Bekolay, T.},
     DeWolf, T., Tang, C., Rasmussen, D. (2012)
     {\sl A large-scale model of the functioning brain.} \\
@@ -173,10 +164,6 @@ Declined & 2012/09 -- 2013/09 \\
     {\sl Neural representations of compositional structures: representing and manipulating vector spaces with spiking neurons.} \\
     Connection Science 22, 145-153.
 
-\section{IN PRESS}
-  Eliasmith, C., \textbf{Bekolay, T.}, and Choo, X. (2011) \\
-   {\sl Biological cognition: Learning and memory}, in Eliasmith, C. ``How to build a brain: A neural architecture for biological cognition.'' Oxford University Press.
-
 \section{POSTERS \\PRESENTED}
   \textbf{Bekolay, T.}, Liu, B., Eliasmith, C., Laubach, M. (2012)
     {\sl A spiking neural model of strategy shifting in a simple reaction time task} \\
@@ -189,6 +176,19 @@ Declined & 2012/09 -- 2013/09 \\
   \textbf{Bekolay, T.}, Metz, D., Klassen, S., Martin, B., Mahaffy, P. (2008) \\
     {\sl Creating interactive animations for teaching science.} \\
     NSERC Undergraduate Poster Competition, 2008, in Winnipeg, MB.
+
+\section{CONFERENCE \\PRESENTATIONS}
+  \textbf{Bekolay, T.} (2013)
+    {\sl An efficient workflow for reproducible science.} \\
+    SciPy 2013, in Austin, TX.
+
+  \textbf{Bekolay, T.} (2013)
+    {\sl A comprehensive look at representing physical quantities in Python.}
+    SciPy 2013, in Austin, TX.
+
+  \textbf{Bekolay, T.} (2012)
+    {\sl Writing self-documenting scientific code using physical quantities.}
+    PyCon Canada 2012, in Toronto, ON.
 
 \section{NON-REFEREED \\PUBLICATIONS}
   \textbf{Bekolay, T.} (2011)
@@ -212,9 +212,13 @@ Declined & 2012/09 -- 2013/09 \\
     Centre for Theoretical Neuroscience Technical Report CTN-TR-20100803-006.
 
 \section{SOFTWARE}
-  \textbf{Bekolay, T.} (2010 - 2012)
+  \textbf{Bekolay, T.} (2010 - Present)
     {\sl Build manager and contributor to the Nengo neural simulator.}
     Released under a Mozilla public license.
+
+  \textbf{Bekolay, T.} (2013)
+    {\sl Contributions to the Matplotlib plotting library.}
+    Released under a BSD license.
 
   \textbf{Bekolay, T.} (2012)
     {\sl Co-maintainer of the python-quantities library for physical quantities in Python.} Released under a BSD license.
