CV as of January 2014

--- a/tbekolay_cv.tex
+++ b/tbekolay_cv.tex
@@ -3,13 +3,20 @@
 \usepackage[T1]{fontenc}
 \usepackage{charter}
 \usepackage{inconsolata}
+\usepackage[official]{eurosym}
 \usepackage{booktabs}
+\usepackage{fancyhdr}
+
+\pagestyle{fancy}
+\renewcommand{\headrulewidth}{0pt}
+\fancyhf{}
+\rfoot{\rule{13.57em}{0.4pt} \\ Updated January 2014~|~\thepage~of~\pageref{LastPage}}
 
 \setlength{\parskip}{0.6em}
 
 \begin{document}
 
-\name{\Huge{Trevor Bekolay} \hspace{7.8em} \small{tbekolay@gmail.com}}
+\name{\Huge{Trevor Bekolay} \hspace{7.5em} \normalsize{tbekolay@gmail.com}}
 
 \begin{resume}
 
@@ -26,7 +33,7 @@ University of Waterloo, Waterloo, ON, \\
 graduated October 2011 \\
 Member of the Computational Neuroscience Research Group \\
 Cumulative GPA: 91.50
-  
+
 {\sl Honours Bachelor of Computer Science, Co-op Option} \\
 University of Manitoba, Winnipeg, MB, \\
 graduated May 2009 \\
@@ -35,14 +42,16 @@ Cumulative GPA: 4.28/4.5
 
 \section{AWARDS \& \\ SCHOLARSHIPS}
 
-\begin{tabular}{lrr}
+\begin{tabular}{lrl}
+{\sl Travel Award for Cognitive Science 2013} (AI Journal) &
+\euro{}500 & 2013/07 \\
 {\sl David R. Cheriton Grad. Scholarship} (CS, UWaterloo) &
 \$20,000 & 2012/09 -- 2014/09 \\
 {\sl Alexander Graham Bell CGS - Doctorate} (NSERC) &
 \$105,000 & 2012/09 -- 2015/09 \\
 {\sl President's Graduate Scholarship} (CS, UWaterloo) &
 \$30,000 & 2012/09 -- 2015/09 \\
-{\sl Ontario Graduate Scholarship} (Gov. of Ontario) & 
+{\sl Ontario Graduate Scholarship} (Gov. of Ontario) &
 Declined & 2012/09 -- 2013/09 \\
 {\sl Ontario Graduate Scholarship} (Gov. of Ontario) &
 \$15,000 & 2011/09 -- 2012/09 \\
@@ -71,170 +80,223 @@ Declined & 2012/09 -- 2013/09 \\
 \end{tabular}
 
 \section{TEACHING \\EXPERIENCE}
-  {\bf Sessional Instructor} ~~3 terms \vspace{4pt} \\
-  David R. Cheriton School of Computer Science, University of Waterloo
-  \begin{itemize}  \itemsep -2pt
-    \item CS230 - Introduction to Computers and Computer Systems \hfill Fall 2011
-    \item CS116 - Introduction to Computer Science 2 \hfill Winter 2011
-  \end{itemize} \vspace{-4pt}
-  Department of Computer Science, University of Manitoba
-  \begin{itemize}  \itemsep -2pt
-    \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2008
-  \end{itemize}
-  
-  {\bf Tutorial/Lab Instructor} ~~9 terms \vspace{4pt} \\
-  David R. Cheriton School of Computer Science, University of Waterloo
-  \begin{itemize}  \itemsep -2pt
-    \item CS230 - Intro to Comp. \& Comp. Systems \hfill Fall 2012, Fall 2011, Winter 2010
-    \item CS115 - Introduction to Computer Science 1 \hfill Fall 2010
-  \end{itemize} \vspace{-4pt}
-  Department of Computer Science, University of Manitoba
-  \begin{itemize}  \itemsep -2pt
-    \item COMP2160 - Programming Practices \hfill Fall 2008, Fall 2007
-    \item COMP2140 - Data Structures and Algorithms \hfill Winter 2008
-    \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2007
-    \item COMP1260 - Introductory Computer Usage 1 \hfill Fall 2006
-  \end{itemize}
-  
-  {\bf Marker} ~~8 terms \vspace{4pt} \\
-  David R. Cheriton School of Computer Science, University of Waterloo
-  \begin{itemize}  \itemsep -2pt
-    \item CS486/686 - Introduction to Artificial Intelligence \hfill Summer 2010
-    \item CS135 - Designing Functional Programs \hfill Fall 2009
-  \end{itemize} \vspace{-4pt}
-  Department of Computer Science, University of Manitoba
-  \begin{itemize}  \itemsep -2pt
-    \item COMP3040 - Technical Communication in CS \hfill Winter 2009, Winter 2008
-    \item COMP3620 - Professional Practice in Computer Science \hfill Winter 2009
-    \item COMP2140 - Data Structures and Algorithms \hfill Winter 2008, Winter 2007
-    \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2006
-  \end{itemize}
+
+{\bf Sessional Instructor} ~~3 terms \vspace{4pt} \\
+David R. Cheriton School of Computer Science, University of Waterloo
+\begin{itemize}  \itemsep -2pt
+  \item CS230 - Introduction to Computers and Computer Systems \hfill Fall 2011
+  \item CS116 - Introduction to Computer Science 2 \hfill Winter 2011
+\end{itemize} \vspace{-4pt}
+Department of Computer Science, University of Manitoba
+\begin{itemize}  \itemsep -2pt
+  \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2008
+\end{itemize}
+
+{\bf Tutorial/Lab Instructor} ~~9 terms \vspace{4pt} \\
+David R. Cheriton School of Computer Science, University of Waterloo
+\begin{itemize}  \itemsep -2pt
+  \item CS230 - Intro to Comp. \& Comp. Systems \hfill Fall 2012, Fall 2011, Winter 2010
+  \item CS115 - Introduction to Computer Science 1 \hfill Fall 2010
+\end{itemize} \vspace{-4pt}
+Department of Computer Science, University of Manitoba
+\begin{itemize}  \itemsep -2pt
+  \item COMP2160 - Programming Practices \hfill Fall 2008, Fall 2007
+  \item COMP2140 - Data Structures and Algorithms \hfill Winter 2008
+  \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2007
+  \item COMP1260 - Introductory Computer Usage 1 \hfill Fall 2006
+\end{itemize}
+
+{\bf Marker} ~~8 terms \vspace{4pt} \\
+David R. Cheriton School of Computer Science, University of Waterloo
+\begin{itemize}  \itemsep -2pt
+  \item CS486/686 - Introduction to Artificial Intelligence \hfill Summer 2010
+  \item CS135 - Designing Functional Programs \hfill Fall 2009
+\end{itemize} \vspace{-4pt}
+Department of Computer Science, University of Manitoba
+\begin{itemize}  \itemsep -2pt
+  \item COMP3040 - Technical Communication in CS \hfill Winter 2009, Winter 2008
+  \item COMP3620 - Professional Practice in Computer Science \hfill Winter 2009
+  \item COMP2140 - Data Structures and Algorithms \hfill Winter 2008, Winter 2007
+  \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2006
+\end{itemize}
 
 \section{TEACHING \\ACCREDITATION}
-  {\bf Certificate in University Teaching} \\
-  In progress; expected completion in August, 2013.
 
-  {\bf Fundamentals of University Teaching} \\
-  Completed in April, 2012.
+{\bf Certificate in University Teaching} \\
+In progress; expected completion in August, 2013.
+
+{\bf Fundamentals of University Teaching} \\
+Completed in April, 2012.
 
 \section{WORK \\EXPERIENCE}
-  {\sl Staff Writer} \hfill Winter 2010 - Summer 2011 \\
-  How-To Geek, LLC, Herndon, VA
-  
-  {\sl Science and Technology Editor} \hfill 2008 - 2009 \\
-  The Manitoban student newspaper, University of Manitoba
-  
-  {\sl Research Assistant} \hfill Winter 2008 \\
-  Centres for Research in Youth, Science Teaching and Learning (CRYSTAL)
-  
-  {\sl Research Assistant} \hfill Winter 2007 \\
-  Intelligent Reasoning, Critiquing, and Learning lab at the University of Alberta
+
+{\sl Staff Writer} \hfill Winter 2010 - Summer 2011 \\
+How-To Geek, LLC, Herndon, VA
+
+{\sl Science and Technology Editor} \hfill 2008 - 2009 \\
+The Manitoban student newspaper, University of Manitoba
+
+{\sl Research Assistant} \hfill Winter 2008 \\
+Centres for Research in Youth, Science Teaching and Learning (CRYSTAL)
+
+{\sl Research Assistant} \hfill Winter 2007 \\
+Intelligent Reasoning, Critiquing, and Learning lab at the University of Alberta
 
 \section{MEMBERSHIPS}
-  TeX Users Group. June 2012 - Present.
-  
-  	Society for Neuroscience. 2011.
+
+TeX Users Group. June 2012 - Present.
+
+Society for Neuroscience. 2011.
 
 \section{OTHER \\ ACTIVITIES}
-  Co-founder and co-chair of the Cheriton Review committee,
-  University of Waterloo. 2011-2012.
 
-  TA Committee member of the CS-GSA, University of Waterloo. \\
-  2010-2012.
+TA Committee member of the CS-GSA, University of Waterloo. \\
+2010-2012.
 
-  University of Ottawa Summer School in Computational Neuroscience. \\
-  June 13-25, 2010.
+University of Ottawa Summer School in Computational Neuroscience. \\
+June 13-25, 2010.
 
 \clearpage
 
-\section{REFEREED \\PUBLICATIONS}
-  Eliasmith, C., \textbf{Bekolay, T.}, and Choo, X. (2013) \\
-   {\sl Biological cognition: Learning and memory}, in Eliasmith, C. ``How to build a brain: A neural architecture for biological cognition.'' Oxford University Press.
+{\Large \bf Refereed Publications} \\ \vspace{-8pt} \hrule
 
-  Eliasmith, C., Stewart, T.C., Choo, X., \textbf{Bekolay, T.},
-    DeWolf, T., Tang, C., Rasmussen, D. (2012)
-    {\sl A large-scale model of the functioning brain.} \\
-    Science 338:6111, 1202-1205. DOI: 10.1126/science.1225266
+\section{JOURNAL \\ARTICLES}
 
-  Stewart, T.C., \textbf{Bekolay, T.}, Eliasmith, C. (2012)
-    {\sl Learning to select actions with spiking neurons in the Basal Ganglia.} \\
-    Frontiers in Neuroscience 6:2. DOI: 10.3389/fnins.2012.00002
+\textbf{T. Bekolay}, M. Laubach, C. Eliasmith. (In press) \\
+  {\sl A spiking neural integrator model of the adaptive control of action
+  by the medial prefrontal cortex.} Journal of Neuroscience.
 
-  Stewart, T.C., \textbf{Bekolay, T.}, Eliasmith, C. (2011)
-    {\sl Neural representations of compositional structures: representing and manipulating vector spaces with spiking neurons.} \\
-    Connection Science 22, 145-153.
+\textbf{T. Bekolay}, J. Bergstra, E. Hunsberger, T. DeWolf, T.C. Stewart,
+  D. Rasmussen, X. Choo, A. R. Voelker, C. Eliasmith. (2014) \\
+  {\sl Nengo: a Python tool for building large-scale functional
+  brain models.} \\ Frontiers in Neuroinformatics, 7:48.
+  DOI: 10.3389/fninf.2013.00048
 
-\section{POSTERS \\PRESENTED}
-  \textbf{Bekolay, T.}, Liu, B., Eliasmith, C., Laubach, M. (2012)
-    {\sl A spiking neural model of strategy shifting in a simple reaction time task} \\
-    Society for Neuroscience, 2012, in New Orleans, LA.
+C. Eliasmith, T.C. Stewart, X. Choo, \textbf{T. Bekolay},
+  T. DeWolf, C. Tang, D. Rasmussen. (2012)
+  {\sl A large-scale model of the functioning brain.} \\
+  Science 338:6111, 1202-1205. DOI: 10.1126/science.1225266
 
-  \textbf{Bekolay, T.}, Eliasmith, C. (2011)
-    {\sl A general error-modulated STDP learning rule applied to reinforcement learning in the basal ganglia.} \\
-    Computational and Systems Neuroscience, 2011, in Salt Lake City, UT.
-  
-  \textbf{Bekolay, T.}, Metz, D., Klassen, S., Martin, B., Mahaffy, P. (2008) \\
-    {\sl Creating interactive animations for teaching science.} \\
-    NSERC Undergraduate Poster Competition, 2008, in Winnipeg, MB.
+T.C. Stewart, \textbf{T. Bekolay}, C. Eliasmith. (2012) \\
+  {\sl Learning to select actions with spiking neurons in the
+  Basal Ganglia.} \\
+  Frontiers in Neuroscience 6:2. DOI: 10.3389/fnins.2012.00002
 
-\section{CONFERENCE \\PRESENTATIONS}
-  \textbf{Bekolay, T.} (2013)
-    {\sl An efficient workflow for reproducible science.} \\
-    SciPy 2013, in Austin, TX.
+T.C. Stewart, \textbf{T. Bekolay}, C. Eliasmith. (2011)
+  {\sl Neural representations of compositional structures:
+  representing and manipulating vector spaces with spiking neurons.} \\
+  Connection Science 22, 145-153.
 
-  \textbf{Bekolay, T.} (2013)
-    {\sl A comprehensive look at representing physical quantities in Python.}
-    SciPy 2013, in Austin, TX.
+\section{CONFERENCE \\PROCEEDINGS}
 
-  \textbf{Bekolay, T.} (2012)
-    {\sl Writing self-documenting scientific code using physical quantities.}
-    PyCon Canada 2012, in Toronto, ON.
+\textbf{T. Bekolay}, C. Kolbeck, C. Eliasmith. {\sl Simultaneous
+  unsupervised and supervised learning of cognitive functions
+  in biologically plausible spiking neural networks,} \\ in 35th Annual
+  Conference of the Cognitive Science Society, 169-174.
+  Cognitive Science Society, 2013.
 
-\section{NON-REFEREED \\PUBLICATIONS}
-  \textbf{Bekolay, T.} (2011)
-    {\sl Learning in large-scale spiking neural networks.} \\
-    Masters of Mathematics thesis, University of Waterloo.
+C. Kolbeck, \textbf{T. Bekolay}, C. Eliasmith. {\sl A biologically
+  plausible spiking neuron model of fear conditioning,} in 12 Interantional
+  Conference on Cognitive Modelling, 53-58.
+  Carleton University, 2013.
 
-  \textbf{Bekolay, T.} (2010) \\
-    {\sl Learning nonlinear functions on vectors: examples and predictions.} \\
-      Centre for Theoretical Neuroscience Technical Report CTN-TR-20101217-010.
+\section{BOOK CHAPTERS}
 
-  \textbf{Bekolay, T.} (2010)
-    {\sl Automating the Nengo build process.} \\
-    Centre for Theoretical Neuroscience Technical Report CTN-TR-20100917-009.
+C. Eliasmith, \textbf{T. Bekolay}, and X. Choo. (2013) \\
+  {\sl Biological cognition: Learning and memory}, in C. Eliasmith.
+  ``How to build a brain: A neural architecture for biological cognition.''
+  Oxford University Press. \vspace{0.42em}
 
-  \textbf{Bekolay, T.} (2010)
-    {\sl Using and extending plasticity rules in Nengo.} \\
-    Centre for Theoretical Neuroscience Technical Report CTN-TR-20100910-008.
+{\Large \bf Conference Presentations} \\ \vspace{-8pt} \hrule
 
-  \textbf{Bekolay, T.} (2010)
-    {\sl A general error-based spike-timing dependent learning rule for the Neural Engineering Framework.} \\
-    Centre for Theoretical Neuroscience Technical Report CTN-TR-20100803-006.
+\section{ORAL \\PRESENTATIONS}
+
+\textbf{T. Bekolay}, C. Kolbeck, C. Eliasmith.
+  {\sl Simultaneous unsupervised and supervised learning of cognitive
+  functions in biologically plausible spiking neural networks.}
+  Cognitive Science 2013, in Berlin, DE.
+
+\textbf{T. Bekolay} {\sl An efficient workflow for reproducible science.}
+  SciPy 2013, in Austin, TX.
+
+\textbf{T. Bekolay}
+  {\sl A comprehensive look at representing physical quantities in Python.}
+  SciPy 2013, in Austin, TX.
+
+\textbf{T. Bekolay}
+  {\sl Writing self-documenting scientific code using physical quantities.}
+  PyCon Canada 2012, in Toronto, ON.
+
+\section{POSTER \\PRESENTATIONS}
+
+\textbf{T. Bekolay}, B. Liu, C. Eliasmith, M. Laubach. (2012)
+  {\sl A spiking neural model of strategy shifting in a simple
+  reaction time task} \\
+  Society for Neuroscience, 2012, in New Orleans, LA.
+
+\textbf{T. Bekolay}, C. Eliasmith. (2011)
+  {\sl A general error-modulated STDP learning rule applied to
+  reinforcement learning in the basal ganglia.} \\
+  Computational and Systems Neuroscience, 2011, in Salt Lake City, UT.
+
+\textbf{T. Bekolay}, D. Metz, S. Klassen, B. Martin, P. Mahaffy. (2008) \\
+  {\sl Creating interactive animations for teaching science.} \\
+  NSERC Undergraduate Poster Competition, 2008, in Winnipeg, MB.
+  \vspace{0.42em}
+
+{\Large \bf Non-refereed Publications} \\ \vspace{-8pt} \hrule
+
+\section{THESES}
+
+\textbf{T. Bekolay.} (2011)
+  {\sl Learning in large-scale spiking neural networks.} \\
+  Masters of Mathematics thesis, University of Waterloo.
+
+\section{TECHNICAL \\REPORTS}
+
+\textbf{T. Bekolay.} (2010) \\
+  {\sl Learning nonlinear functions on vectors: examples and predictions.} \\
+  Centre for Theoretical Neuroscience Technical Report CTN-TR-20101217-010.
+
+\textbf{T. Bekolay.} (2010)
+  {\sl Automating the Nengo build process.} \\
+  Centre for Theoretical Neuroscience Technical Report CTN-TR-20100917-009.
+
+\textbf{T. Bekolay.} (2010)
+  {\sl Using and extending plasticity rules in Nengo.} \\
+  Centre for Theoretical Neuroscience Technical Report CTN-TR-20100910-008.
+
+\textbf{T. Bekolay.} (2010)
+  {\sl A general error-based spike-timing dependent learning rule for
+  the Neural Engineering Framework.} \\
+  Centre for Theoretical Neuroscience Technical Report CTN-TR-20100803-006.
 
 \section{SOFTWARE}
-  \textbf{Bekolay, T.} (2010 - Present)
-    {\sl Build manager and contributor to the Nengo neural simulator.}
-    Released under a Mozilla public license.
 
-  \textbf{Bekolay, T.} (2013)
-    {\sl Contributions to the Matplotlib plotting library.}
-    Released under a BSD license.
+\textbf{T. Bekolay.} (2010 - Present)
+  {\sl Build manager and contributor to the Nengo neural simulator.}
+  Released under Mozilla public license and GNU General Public License.
 
-  \textbf{Bekolay, T.} (2012)
-    {\sl Co-maintainer of the python-quantities library for physical quantities in Python.} Released under a BSD license.
+\textbf{T. Bekolay.} (2013)
+  {\sl Contributions to the Matplotlib plotting library.}
+  Released under a BSD license.
 
-  \textbf{Bekolay, T.} (2012)
-    {\sl Maintainer of the JNumeric library for matrix operations in Jython.} \\
-    Released under the Python license.
+\textbf{T. Bekolay.} (2012 - Present)
+  {\sl Co-maintainer of the python-quantities library for physical quantities
+  in Python.} Released under a BSD license.
 
-  \textbf{Bekolay, T.} (2011)
-    {\sl Contributions to the PyBrain machine learning library.} \\
-    Released under a BSD license.
+\textbf{T. Bekolay.} (2012)
+  {\sl Maintainer of the JNumeric library for matrix operations in Jython.} \\
+  Released under the Python license.
 
-  \textbf{Bekolay, T.} Thue, D., Bulitko, V.. (2007)
-    {\sl Creator of Behaviour Tool for PaSSAGE.} \\
-    Released under a BSD license.
+\textbf{T. Bekolay.} (2011)
+  {\sl Contributions to the PyBrain machine learning library.} \\
+  Released under a BSD license.
 
+\textbf{T. Bekolay,} D. Thue, V. Bulitko. (2007)
+  {\sl Creator of Behaviour Tool for PaSSAGE.} \\
+  Released under a BSD license.
+
+\label{LastPage}
 \end{resume}
 \end{document}
-
