Added NumFOCUS membership

--- a/tbekolay_cv.tex
+++ b/tbekolay_cv.tex
@@ -144,6 +144,9 @@ Intelligent Reasoning, Critiquing, and Learning lab at the University of Alberta
 
 \section{MEMBERSHIPS}
 
+NumPy Foundation for Open Code for Usable Science (NumFOCUS),
+supporting member. January 2014 - Present.
+
 TeX Users Group. June 2012 - Present.
 
 Cognitive Science Society. 2013.
