--- a/tbekolay_cv.tex
+++ b/tbekolay_cv.tex
@@ -146,6 +146,8 @@ Intelligent Reasoning, Critiquing, and Learning lab at the University of Alberta
 
 TeX Users Group. June 2012 - Present.
 
+Cognitive Science Society. 2013.
+
 Society for Neuroscience. 2011.
 
 \section{OTHER \\ ACTIVITIES}
