CV as of November, 2014

--- a/tbekolay_cv.tex
+++ b/tbekolay_cv.tex
@@ -3,6 +3,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{charter}
 \usepackage{inconsolata}
+\usepackage{url}
 \usepackage[official]{eurosym}
 \usepackage{booktabs}
 \usepackage{fancyhdr}
@@ -10,7 +11,7 @@
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0pt}
 \fancyhf{}
-\rfoot{\rule{13.57em}{0.4pt} \\ Updated January 2014~|~\thepage~of~\pageref{LastPage}}
+\rfoot{\rule{14.7em}{0.4pt} \\ Updated November 2014~|~\thepage~of~\pageref{LastPage}}
 
 \setlength{\parskip}{0.6em}
 
@@ -46,7 +47,7 @@ Cumulative GPA: 4.28/4.5
 {\sl Travel Award for Cognitive Science 2013} (AI Journal) &
 \euro{}500 & 2013/07 \\
 {\sl David R. Cheriton Grad. Scholarship} (CS, UWaterloo) &
-\$20,000 & 2012/09 -- 2014/09 \\
+\$20,000 & 2013/01 -- 2014/12 \\
 {\sl Alexander Graham Bell CGS - Doctorate} (NSERC) &
 \$105,000 & 2012/09 -- 2015/09 \\
 {\sl President's Graduate Scholarship} (CS, UWaterloo) &
@@ -84,56 +85,66 @@ Declined & 2012/09 -- 2013/09 \\
 {\bf Sessional Instructor} ~~3 terms \vspace{4pt} \\
 David R. Cheriton School of Computer Science, University of Waterloo
 \begin{itemize}  \itemsep -2pt
-  \item CS230 - Introduction to Computers and Computer Systems \hfill Fall 2011
-  \item CS116 - Introduction to Computer Science 2 \hfill Winter 2011
+  \item CS230 -- Introduction to Computers and Computer Systems \hfill Fall 2011
+  \item CS116 -- Introduction to Computer Science 2 \hfill Winter 2011
 \end{itemize} \vspace{-4pt}
 Department of Computer Science, University of Manitoba
 \begin{itemize}  \itemsep -2pt
-  \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2008
+  \item COMP1010 -- Introductory Computer Science 1 \hfill Fall 2008
+\end{itemize}
+
+{\bf Workshop Instructor} ~~3 two day workshops \vspace{4pt} \\
+Software Carpentry, Mozilla Foundation
+
+\begin{itemize} \itemsep -2pt
+  \item CAPS Computational Biology Laboratory. Columbus, OH. \hfill
+    October, 2014
+  \item General audience at PyCon. Montreal, QC. \hfill April, 2014
+  \item General audience at Mozilla. Toronto, ON. \hfill February, 2014
 \end{itemize}
 
 {\bf Tutorial/Lab Instructor} ~~9 terms \vspace{4pt} \\
 David R. Cheriton School of Computer Science, University of Waterloo
 \begin{itemize}  \itemsep -2pt
-  \item CS230 - Intro to Comp. \& Comp. Systems \hfill Fall 2012, Fall 2011, Winter 2010
-  \item CS115 - Introduction to Computer Science 1 \hfill Fall 2010
+  \item CS230 -- Intro to Comp. \& Comp. Systems \hfill Fall 2012, Fall 2011, Winter 2010
+  \item CS115 -- Introduction to Computer Science 1 \hfill Fall 2010
 \end{itemize} \vspace{-4pt}
 Department of Computer Science, University of Manitoba
 \begin{itemize}  \itemsep -2pt
-  \item COMP2160 - Programming Practices \hfill Fall 2008, Fall 2007
-  \item COMP2140 - Data Structures and Algorithms \hfill Winter 2008
-  \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2007
-  \item COMP1260 - Introductory Computer Usage 1 \hfill Fall 2006
+  \item COMP2160 -- Programming Practices \hfill Fall 2008, Fall 2007
+  \item COMP2140 -- Data Structures and Algorithms \hfill Winter 2008
+  \item COMP1010 -- Introductory Computer Science 1 \hfill Fall 2007
+  \item COMP1260 -- Introductory Computer Usage 1 \hfill Fall 2006
 \end{itemize}
 
 {\bf Marker} ~~8 terms \vspace{4pt} \\
 David R. Cheriton School of Computer Science, University of Waterloo
 \begin{itemize}  \itemsep -2pt
-  \item CS486/686 - Introduction to Artificial Intelligence \hfill Summer 2010
-  \item CS135 - Designing Functional Programs \hfill Fall 2009
+  \item CS486/686 -- Introduction to Artificial Intelligence \hfill Summer 2010
+  \item CS135 -- Designing Functional Programs \hfill Fall 2009
 \end{itemize} \vspace{-4pt}
 Department of Computer Science, University of Manitoba
 \begin{itemize}  \itemsep -2pt
-  \item COMP3040 - Technical Communication in CS \hfill Winter 2009, Winter 2008
-  \item COMP3620 - Professional Practice in Computer Science \hfill Winter 2009
-  \item COMP2140 - Data Structures and Algorithms \hfill Winter 2008, Winter 2007
-  \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2006
+  \item COMP3040 -- Technical Communication in CS \hfill Winter 2009, Winter 2008
+  \item COMP3620 -- Professional Practice in Computer Science \hfill Winter 2009
+  \item COMP2140 -- Data Structures and Algorithms \hfill Winter 2008, Winter 2007
+  \item COMP1010 -- Introductory Computer Science 1 \hfill Fall 2006
 \end{itemize}
 
 \section{TEACHING \\ACCREDITATION}
 
 {\bf Certificate in University Teaching} \\
-In progress; expected completion in August, 2013.
+In progress; expected completion in April, 2015.
 
 {\bf Fundamentals of University Teaching} \\
 Completed in April, 2012.
 
 \section{WORK \\EXPERIENCE}
 
-{\sl Staff Writer} \hfill Winter 2010 - Summer 2011 \\
+{\sl Staff Writer} \hfill Winter 2010 -- Summer 2011 \\
 How-To Geek, LLC, Herndon, VA
 
-{\sl Science and Technology Editor} \hfill 2008 - 2009 \\
+{\sl Science and Technology Editor} \hfill 2008 -- 2009 \\
 The Manitoban student newspaper, University of Manitoba
 
 {\sl Research Assistant} \hfill Winter 2008 \\
@@ -145,31 +156,47 @@ Intelligent Reasoning, Critiquing, and Learning lab at the University of Alberta
 \section{MEMBERSHIPS}
 
 NumPy Foundation for Open Code for Usable Science (NumFOCUS),
-supporting member. January 2014 - Present.
+supporting member. January 2014 -- Present.
 
-TeX Users Group. June 2012 - Present.
+Cognitive Science Society. 2013.
+
+TeX Users Group. June 2012 -- Present.
 
 Cognitive Science Society. 2013.
 
 Society for Neuroscience. 2011.
 
+\section{STUDENT \\ SUPERVISION}
+
+Supervised Jonathan Lai (undergraduate research student) Fall 2011.
+
+\section{OUTREACH}
+
+Guest on the Weekly Weinersmith podcast, December 9, 2012. \\
+\url{http://www.weeklyweinersmith.com/?p=510}
+
 \section{OTHER \\ ACTIVITIES}
+
+Assistant Editor for Scholarpedia (\url{www.scholarpedia.org}). \\
+September, 2010 -- present.
+
+Instructor at Nengo Summer School, University of Waterloo. \\
+June 9-21, 2014
 
 TA Committee member of the CS-GSA, University of Waterloo. \\
 2010-2012.
 
-University of Ottawa Summer School in Computational Neuroscience. \\
-June 13-25, 2010.
-
-\clearpage
+Attended University of Ottawa Summer School in Computational Neuroscience. \\
+June 13-25, 2010. \vspace{8pt}
 
 {\Large \bf Refereed Publications} \\ \vspace{-8pt} \hrule
 
 \section{JOURNAL \\ARTICLES}
 
-\textbf{T. Bekolay}, M. Laubach, C. Eliasmith. (In press) \\
+\textbf{T. Bekolay}, M. Laubach, C. Eliasmith. (2014) \\
   {\sl A spiking neural integrator model of the adaptive control of action
-  by the medial prefrontal cortex.} Journal of Neuroscience.
+  by the medial prefrontal cortex.}
+  The Journal of Neuroscience, 34(5):1892--1902
 
 \textbf{T. Bekolay}, J. Bergstra, E. Hunsberger, T. DeWolf, T.C. Stewart,
   D. Rasmussen, X. Choo, A. R. Voelker, C. Eliasmith. (2014) \\
@@ -180,7 +207,7 @@ June 13-25, 2010.
 C. Eliasmith, T.C. Stewart, X. Choo, \textbf{T. Bekolay},
   T. DeWolf, C. Tang, D. Rasmussen. (2012)
   {\sl A large-scale model of the functioning brain.} \\
-  Science 338:6111, 1202-1205. DOI: 10.1126/science.1225266
+  Science 338:6111, 1202--1205. DOI: 10.1126/science.1225266
 
 T.C. Stewart, \textbf{T. Bekolay}, C. Eliasmith. (2012) \\
   {\sl Learning to select actions with spiking neurons in the
@@ -190,19 +217,25 @@ T.C. Stewart, \textbf{T. Bekolay}, C. Eliasmith. (2012) \\
 T.C. Stewart, \textbf{T. Bekolay}, C. Eliasmith. (2011)
   {\sl Neural representations of compositional structures:
   representing and manipulating vector spaces with spiking neurons.} \\
-  Connection Science 22, 145-153.
+  Connection Science 22, 145--153.
 
 \section{CONFERENCE \\PROCEEDINGS}
+
+B. J. Kr\"{o}ger, \textbf{T. Bekolay}, C. Eliasmith. \\
+  {\sl Modeling speech
+  production using the Neural Engineering Framework,}
+  in 5th IEEE Conference on Cognitive Infocommunications, 203--208.
+  Vietri sul Mare, Italy, 2014.
 
 \textbf{T. Bekolay}, C. Kolbeck, C. Eliasmith. {\sl Simultaneous
   unsupervised and supervised learning of cognitive functions
   in biologically plausible spiking neural networks,} \\ in 35th Annual
-  Conference of the Cognitive Science Society, 169-174.
+  Conference of the Cognitive Science Society, 169--174.
   Cognitive Science Society, 2013.
 
 C. Kolbeck, \textbf{T. Bekolay}, C. Eliasmith. {\sl A biologically
-  plausible spiking neuron model of fear conditioning,} in 12 Interantional
-  Conference on Cognitive Modelling, 53-58.
+  plausible spiking neuron model of fear conditioning,} in 12th International
+  Conference on Cognitive Modelling, 53--58.
   Carleton University, 2013.
 
 \section{BOOK CHAPTERS}
@@ -218,7 +251,7 @@ C. Eliasmith, \textbf{T. Bekolay}, and X. Choo. (2013) \\
 
 \textbf{T. Bekolay}, C. Kolbeck, C. Eliasmith.
   {\sl Simultaneous unsupervised and supervised learning of cognitive
-  functions in biologically plausible spiking neural networks.}
+  functions in biologically plausible spiking neural networks.} \\
   Cognitive Science 2013, in Berlin, DE.
 
 \textbf{T. Bekolay} {\sl An efficient workflow for reproducible science.}
@@ -233,6 +266,12 @@ C. Eliasmith, \textbf{T. Bekolay}, and X. Choo. (2013) \\
   PyCon Canada 2012, in Toronto, ON.
 
 \section{POSTER \\PRESENTATIONS}
+
+\textbf{T. Bekolay}, T. C. Stewart, X. Choo, T. DeWolf, Y. Tang,
+D. Rasmussen, C. Eliasmith (2013)
+  {\sl Spaun: a large-scale model of the functioning brain} \\
+  Cheriton Research Symposium, 2013, in Waterloo, ON. \\
+  {\sl Received third prize award of \$100.}
 
 \textbf{T. Bekolay}, B. Liu, C. Eliasmith, M. Laubach. (2012)
   {\sl A spiking neural model of strategy shifting in a simple
@@ -276,17 +315,25 @@ C. Eliasmith, \textbf{T. Bekolay}, and X. Choo. (2013) \\
   the Neural Engineering Framework.} \\
   Centre for Theoretical Neuroscience Technical Report CTN-TR-20100803-006.
 
+% ??? patents
+
+% http://brevets-patents.ic.gc.ca/opic-cipo/cpd/eng/patent/2798529/summary.html
+
 \section{SOFTWARE}
 
-\textbf{T. Bekolay.} (2010 - Present)
-  {\sl Build manager and contributor to the Nengo neural simulator.}
+\textbf{T. Bekolay.} (2014 -- Present)
+  {\sl Lead developer of the Nengo 2 neural simulator.}
+  Freely available for non-commercial purposes.
+
+\textbf{T. Bekolay.} (2010 -- Present)
+  {\sl Build manager and contributor to the Nengo 1.4 neural simulator.}
   Released under Mozilla public license and GNU General Public License.
 
 \textbf{T. Bekolay.} (2013)
   {\sl Contributions to the Matplotlib plotting library.}
   Released under a BSD license.
 
-\textbf{T. Bekolay.} (2012 - Present)
+\textbf{T. Bekolay.} (2012 -- Present)
   {\sl Co-maintainer of the python-quantities library for physical quantities
   in Python.} Released under a BSD license.
 
